<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alfr3d</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_blink">Blink</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_call_response">Response</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_video">Video</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="url_string">Alfr3d Url</string>
    <string name="default_url">no url defined</string>
    <string name="request">request</string>
    <string name="host_settings">Host Settings</string>
    <string name="action_reset">Reset</string>
    <string name="blink_button">Blink Button</string>
    <string name="welcome_home_button">Welcome Home Button</string>
    <string name="start_video_button">Start Video Button</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>