<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainAlfr3d">

    <EditText android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button" />

    <Button android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/edit_message" />

    <TextView android:id="@+id/current_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_url"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edit_message" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton1"
        android:onClick="sendButtonBlink"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/blink_button"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/edit_message" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:onClick="sendButtonWelcome"
        android:src="@drawable/ic_launcher"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_toRightOf="@+id/imageButton1"
        android:contentDescription="@string/welcome_home_button" />

</RelativeLayout>
